# parseTable1

./: .Rbuildignore  .gitignore  AGENTS.md  DESCRIPTION  NAMESPACE  README.md  cobaltextracted.json  debug_summary.txt  out  pyproject.toml  xx
R/: compare_normalized_rows_to_definition.R  extract_variables_from_final_interpretation.R  inspect_paper_outputs.R  observed_table_one.R  pt1_json_io.R  visualize_table_from_json.R
docs/: addnewparser.md  design_index.md  layout-reorg_prompt.md  llm_integration.md  llm_semantic_cli_changes.md  llm_semantic_inference_phase.md  llm_semantic_inference_steps.md  llm_setup.md  multitable_architecture_spec.md  multitable_implementation_plan.md  normalized_table_output_prompt.md  paper_markdown_spec.md  parsing_output_design.md  parsing_process.md  pdf_extraction_strategy.md  pdftableGenerator.md  phase1_prompt.md  phase2_prompt.md  phase3_prompt.md  phase4_prompt.md  phase5_prompt.md  r_visualization.md  rvisualization.md  table_definition_implementation_plan.md  table_definition_schema.md  table_definition_scope.md  value_parsing_spec.md
man/: build_observed_table_one.Rd  compare_table_definition_runs.Rd  compare_table_definitions.Rd  load_paper_outputs.Rd  show_llm_evidence.Rd  show_table_context.Rd  show_table_processing.Rd  show_table_structure.Rd  summarize_llm_semantic_monitoring.Rd  summarize_table_processing.Rd
prompts/: table_definition_semantic_prompt.md  table_definition_variable_plausibility_prompt.md  table_interpretation_prompt.md
schemas/: table_llm_payload.schema.json
scripts/: debug_llm_trace.py  (+4 more)
(+164 files in other folders)
