[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "table1-parser"
version = "0.1.0"
description = "Research-oriented parser for Table 1 epidemiology tables."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "openai>=1.0,<2",
  "pdfplumber>=0.11,<1",
  "pymupdf4llm>=1.27,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
table1-parser = "table1_parser.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["table1_parser*"]
